--- a/InterestCalculator.html
+++ b/InterestCalculator.html
@@ -11,7 +11,7 @@
                 {Principal:"1000", Time:"5"}, 
                 {Principal:"3000" , Time: "1"},
                 {Principal:"2000" , Time:"3"}];
-    var set=[ prince-256, ]
+    var set=[ ]
 // declare an empty array to store the result
     var finalResult = [ ];
     //create a function
